# mr-circuit-tracer

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
circuit_tracer/: __init__.py  __main__.py  graph.py  replacement_model.py
circuit_tracer/attribution/: attribute.py  attribute_nnsight.py  attribute_transformerlens.py  context_nnsight.py  context_transformerlens.py
circuit_tracer/replacement_model/: __init__.py  replacement_model.py  replacement_model_nnsight.py  replacement_model_transformerlens.py
circuit_tracer/transcoder/: activation_functions.py  cross_layer_transcoder.py  single_layer_transcoder.py
circuit_tracer/utils/: MAPPING_INFO.md  __init__.py  caching.py  create_graph_files.py  demo_utils.py  disk_offload.py  hf_utils.py  salient_logits.py  tl_nnsight_mapping.py
demos/: attribute_demo.ipynb  circuit_tracing_tutorial.ipynb  gemma_demo.ipynb  gemma_it_demo.ipynb  graph_visualization.py  intervention_demo.ipynb  llama_demo.ipynb
tests/: _test_get_activations.py  test_attribution_clt.py  test_attributions_gemma.py  test_attributions_gemma3_nnsight.py  test_attributions_gemma_nnsight.py  test_attributions_gpt_oss_nnsight.py  test_attributions_llama.py  test_attributions_llama_nnsight.py  test_cross_layer_transcoder.py  test_freeze_points.py  test_freeze_points_hessian.py  test_graph.py  test_interventions.py  test_offload.py  test_single_layer_transcoder.py  test_transformerlens_nnsight_same_gemma.py  test_transformerlens_nnsight_same_gemma_clts.py  test_transformerlens_nnsight_same_llama.py  test_transformerlens_nnsight_same_llama_clts.py  test_tutorial_notebook_backends.py
tests/utils/: test_caching.py  (+2 more)
(+1 files in other folders)
